# rwm

./: .gitignore  Cargo.toml  README.md
src/: command.rs  config.rs  display.rs  key.rs  layout.rs  lib.rs  main.rs  manager.rs  screen.rs  stack.rs  state.rs  window.rs  workspace.rs
src/display/: mod.rs  xcb_server.rs
src/displays/: mod.rs  xcb_server.rs
src/keys/: mod.rs  xcb_keys.rs
src/layouts/: fullscreen.rs  mod.rs  tall.rs
