[package]
name = "rwm"
version = "0.1.0"
authors = ["binh <dau.thanh.binh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = "0.9.0"
xcb-util = { version = "0.3.0", features = ["keysyms", "ewmh", "cursor"] }
log = "0.4.8"
simple_logger = "1.6.0"
